; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_artifact.c_UpdateFromTVMode.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_artifact.c_UpdateFromTVMode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Atari800_TV_NTSC = common dso_local global i32 0, align 4
@mode_ntsc = common dso_local global i32 0, align 4
@ARTIFACT_mode = common dso_local global i32 0, align 4
@mode_pal = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @UpdateFromTVMode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @UpdateFromTVMode(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @Atari800_TV_NTSC, align 4
  %5 = icmp eq i32 %3, %4
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* @mode_ntsc, align 4
  store i32 %7, i32* @ARTIFACT_mode, align 4
  br label %10

8:                                                ; preds = %1
  %9 = load i32, i32* @mode_pal, align 4
  store i32 %9, i32* @ARTIFACT_mode, align 4
  br label %10

10:                                               ; preds = %8, %6
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
